# pyMyriad

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRANCH_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  UPDATE_LISTING_README.md  inter2.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  version-bump.yml
docs/: FORMAT_STATISTICS.md  LISTING_FIXES.md  LISTING_GUIDE.md  LISTING_IMPROVEMENTS.md  conf.py  index.rst
docs/api/: analysis_tree.rst  data_tree.rst  index.rst  listing.rst  plots.rst  tabular.rst  utils.rst
docs/examples/: index.rst
docs/guides/: concepts.rst  index.rst  interoperability.rst  quickstart.rst  workflows.rst
examples/: EXAMPLES_GUIDE.md  lab_summary_table_demo.py  summary_table_demo.py
examples/notebooks/: 01_getting_started.ipynb  02_analysis_trees.ipynb  03_tables_and_listings.ipynb  04_plots.ipynb  05_formatting_statistics.ipynb  06_advanced_topics.ipynb  07_interoperability.ipynb  08_forest_table.ipynb  08_row_pivot_clinical_table.ipynb  analysis_plan.json  listings.ipynb  plots.ipynb  tabulation.ipynb  tutorial.ipynb
examples/scripts/: cross_analysis.py  format_statistics_tutorial.py  listing_tutorial.py  multi_round_formatting.py  script_test.py
src/pyMyriad/: __init__.py  analysis_tree.py  cli.py  clinical.py  data_tree.py  listing.py  plot_table.py  plots.py  tabular.py  utils.py
src/pyMyriade/: __init__.py  analysis_tree.py  data_tree.py  plots.py  pyMyriade  tabular.py  utils.py
tests/: __init__.py  test_analysis_tree.py  test_change_from_baseline.py  test_clinical.py  test_data_tree.py  test_format_statistics.py  test_json_serialization.py  test_listing.py  test_performance.py  test_plot.py  test_plot_table.py  test_run.py  test_tree_construction.py
