[project]
name = "pymyriad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "numpy>=1.22.0",
    "pandas>=2.0.0",
    "plotly>=6.3.0",
    "great-tables>=0.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
foocli = "pyMyriad.cli:main"

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance benchmarks (deselect with '-m \"not performance\"')",
]
# Skip performance tests by default
addopts = "-m 'not performance'"
